fix: posts index on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,7 @@ h6 {
 
 .date {
   width: 4rem;
+  flex-shrink: 0;
 }
 
 .footer-links {
